Version 0.9
    o added the necessary "ddi:codebook:2_5" statement to the xsi:schemaLocation
      in the codebook, to validate the resulting DDI .xml file
    
Version 0.8
    o fixed bug exporting invalid DDI .xml files
    o fixed bug exporting declared missing values to Excel
    o new logical argument "declared" in function convert() allowing users to
      control if variables in converted objects will have the class 'declared'
    
Version 0.7
    o proper production of setup files due to changing the codeBook structure
    o modified convert() for objects of class 'declared', to avoid a bug in
      package ReadStat that prevents exporting missing values to SPSS for
      integer variables
    o sync-ed with the latest version of package admisc
    
Version 0.6
    o function convert() now invisibly returns the imported data
    o function convert() now accepts Excel files for both input and output
    o improved function exportDDI(), now correctly using special characters
    o when converting to R objects, variables are automatically coerced
      to declared labelled objects (see package declared for details)
    o updated code to the latest version of package haven, and (consequently)
      removed argument "binpath" from function convert()
    o new function recodeMissing()
    o new function collectMetadata()
    
Version 0.5
    o fixed bug in make_labelled() when a variable is character,
      yet the value labels and the defined missing values are numeric
    o various other improvements to internal functions
    
Version 0.4
    o improved function convert() for speed
    o sync-ed with the latest version of package admisc
    
Version 0.3
    o new function convert(), to convert from one statistical package to another
    o new function exportDDI(), for DDI codebook version 2.5
    o new function getMetadata(), to extract metadata information from
      statistical package files (such as SPSS or Stata)
    o replaced package XML with package xml2