@@ -1,6 +1,8 @@
 Version 0.9
     o added the necessary "ddi:codebook:2_5" statement to the xsi:schemaLocation
       in the codebook, to validate the resulting DDI .xml file
+    o updated the documentation of function convert() to explain how to use the
+      argument "user_na" from function read.spss() in package haven
     
 Version 0.8
     o fixed bug exporting invalid DDI .xml files
